# be/api/handler/user_handler.go
@@ -22,11 +22,16 @@ func NewUserHandler(service service.UserService) *UserHandler {
 // User godoc
 // @Summary      Get all user
 // @Description   Get all user
-// @Tags         Users
+// @Tags         Users Management
 // @Accept       json
 // @Produce      json
+// @param Authorization header string true "Authorization"
 // @Router       /api/users [GET]
 // @Success      200   {object}  dto.ApiResponseSuccessStruct
+// @securityDefinitions.apiKey token
+// @in header
+// @name Authorization
+// @Security JWT
 func (h *UserHandler) GetAllUser(c *gin.Context) {
 	defer pkg.PanicHandler(c)
 	users, err := h.service.GetAllUser()
@@ -40,12 +45,17 @@ func (h *UserHandler) GetAllUser(c *gin.Context) {
 // User godoc
 // @Summary      Get user by ID
 // @Description  Get user by ID
-// @Tags         Users
+// @Tags         Users Management
 // @Accept       json
 // @Produce      json
 // @Param 		 id path string true "User ID"
+// @param Authorization header string true "Authorization"
 // @Router       /api/users/{id} [GET]
 // @Success      200   {object}  dto.ApiResponseSuccessStruct
+// @securityDefinitions.apiKey token
+// @in header
+// @name Authorization
+// @Security JWT
 func (h *UserHandler) GetUserById(c *gin.Context) {
 	defer pkg.PanicHandler(c)
 	userIdStr := c.Param("id")
@@ -63,34 +73,19 @@ func (h *UserHandler) GetUserById(c *gin.Context) {
 }
 
 // User godoc
-// @Summary      Create new user
-// @Description  Create new user
-// @Tags         Users
-// @Accept multipart/form-data
-// @Produce      json
-// @Param 		 email formData string true "User Email"
-// @Router       /api/users [POST]
-// @Success      200   {object}  dto.ApiResponseSuccessStruct
-func (h *UserHandler) CreateUser(c *gin.Context) {
-	defer pkg.PanicHandler(c)
-	userEmail := c.PostForm("email")
-	newUser, err := h.service.CreateUser(userEmail)
-	if err != nil {
-		log.Error("Happened error when creating new user. Error: ", err)
-		pkg.PanicExeption(constant.UnknownError, "Happened error when creating new user")
-	}
-	c.JSON(http.StatusOK, pkg.BuildResponseSuccess(constant.Success, newUser))
-}
-
-// User godoc
 // @Summary      Delete user
 // @Description  Delete user
-// @Tags         Users
+// @Tags         Users Management
 // @Accept       json
 // @Produce      json
 // @Param 		 id path string true "User ID"
+// @param Authorization header string true "Authorization"
 // @Router       /api/users/{id} [DELETE]
 // @Success      200   {object}  dto.ApiResponseSuccessStruct
+// @securityDefinitions.apiKey token
+// @in header
+// @name Authorization
+// @Security JWT
 func (h *UserHandler) DeleteUserById(c *gin.Context) {
 	defer pkg.PanicHandler(c)
 	userIdStr := c.Param("id")
@@ -110,23 +105,30 @@ func (h *UserHandler) DeleteUserById(c *gin.Context) {
 // User godoc
 // @Summary      Update user
 // @Description  Update user
-// @Tags         Users
+// @Tags         Users Management
 // @Accept multipart/form-data
 // @Produce      json
 // @Param		id	path		string				true	"id"
 // @Param 		 email formData string true "User's New Email"
+// @Param 		 password formData string true "User's New Password"
+// @param Authorization header string true "Authorization"
 // @Router       /api/users/{id} [PUT]
 // @Success      200   {object}  dto.ApiResponseSuccessStruct
+// @securityDefinitions.apiKey token
+// @in header
+// @name Authorization
+// @Security JWT
 func (h *UserHandler) UpdateUser(c *gin.Context) {
 	defer pkg.PanicHandler(c)
 	userIdStr := c.Param("id")
 	email := c.PostForm("email")
+	password := c.PostForm("password")
 	userId, err := strconv.ParseInt(userIdStr, 10, 64)
 	if err != nil {
 		log.Error("Happened error when converting userId to int64. Error: ", err)
 		pkg.PanicExeption(constant.InvalidRequest, "Happened error when converting userId to int64")
 	}
-	updatedUser, err := h.service.UpdateUser(userId, email)
+	updatedUser, err := h.service.UpdateUser(userId, email, password)
 	if err != nil {
 		log.Error("Happened error when updating user. Error: ", err)
 		pkg.PanicExeption(constant.UnknownError, "Happened error when updating a user")
